@@ -3,6 +3,7 @@ Revision history for Perl module Git::PurePerl:
 0.37
      - add minimal docs (thanks to tokuhirom)
      - speed everything up by making the classes immutable
+     - lazily build packs
 
 0.36 Wed Nov 26 21:49:33 GMT 2008
      - add a class to represent tags
